--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,54 @@
 body {
 	background-color: #ded1e1;
 	font-family: "Helvetica Neue", sans-serif;
-	color: #646065;
+	font-weight: 300;
+	color: #141414;
+	font-size: 17px;
+}
+
+h2 {
+	font-weight: bold;
+	font-size: 1.25rem;
+	padding: 10px 0 0 0;
+	margin: 0;
 }
 
 a {
 	color: #5c1d6c;
 	text-decoration: none;
+}
+
+footer {
+	color: #646065;
+}
+
+.container {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.item {
+	margin: auto;
+	text-align: center;
+	border-left: 1px solid #f9ffec;
+	margin-left: -1px;
+	padding: 0 10%;
+}
+
+.container::before {
+	border: 1px;
+}
+
+.item img {
+	width: 20%;
+}
+
+.callout {
+	background: url("../assets/testpg-full-width-callout-background-1200x282.jpg");
+	background-position: center;
+	background-size: cover;
+	height: 282px;
 }
 
 .light {
