--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,36 @@ strong {
 	font-weight: 200;
 }
 
+/* Nav styles */
+.nav {
+	background: #d5d6ce;
+	color: #591f69;
+	padding: 10px 25px 0 112px;
+	text-align: center;
+}
+
+.logo img {
+	width: 156px;
+}
+
+.menu-container {
+	float: right;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+img#cart-icon {
+	width: 49px;
+	height: 49px;
+}
+
+img#menu-icon {
+	width: 38px;
+	height: 38px;
+	padding-left: 25px;
+}
+
 /* Hero section */
 .hero {
 	background: url("../assets/testpg-hero-bg-1200x870.jpg");
@@ -58,7 +88,7 @@ strong {
 	position: absolute;
 	top: 100px;
 	left: 100px;
-	width: 40%;
+	width: 35%;
 	text-align: center;
 }
 
@@ -67,10 +97,11 @@ strong {
 	letter-spacing: -0.2rem;
 	padding: 0;
 	margin: 0;
+	line-height: 80%;
 }
 
 .title strong {
-	font-weight: 400;
+	font-weight: 300;
 }
 
 .subhead {
@@ -88,21 +119,26 @@ strong {
 }
 
 .description {
-	font-size: 2.75rem;
+	font-size: 3.5rem;
 	color: #ffffff;
 }
 
-.hero a.button {
-	padding: 10px 25px;
-	border: 3px solid #ffffff;
+.shop-now-container {
+	margin: 45px;
+}
+
+.shop-now-container a.button {
 	background: #591f69;
 	color: #ffffff;
 	text-transform: uppercase;
 	letter-spacing: 0.2rem;
 	font-weight: 500;
+	margin: 30px;
+	padding: 10px 25px;
+	border: 3px solid #ffffff;
 }
 
-.hero a.button:hover {
+.shop-now-container a.button:hover {
 	background: #ffffff;
 	color: #591f69;
 	border: 3px solid #591f69;
@@ -114,13 +150,26 @@ strong {
 	color: #ffffff;
 	padding: 10px 0;
 	text-align: center;
-	font-size: ;
 }
 
 /* Products Section */
 .products {
 	background: #ffffff;
 	padding: 28px 0;
+}
+
+.products h2 {
+	font-size: 4rem;
+	text-align: center;
+}
+
+.product-category {
+}
+
+.product-name {
+}
+
+.product-price {
 }
 
 /* Callout Section */
